--- a/less/variables.less
+++ b/less/variables.less
@@ -1,4 +1,6 @@
 @font-base-size: 18px;
+@font-weight-thin: 100;
+@font-weight-light: 300;
 @font-weight-normal: 400;
 @font-weight-medium: 500;
 @font-weight-bold: 700;
