--- a/less/variables.less
+++ b/less/variables.less
@@ -10,6 +10,7 @@
 @colour-medium-gray: #E0E0E0;
 @colour-light-gray: #F7F7F7;
 @colour-link-blue: #0066CC;
+@colour-shadow: rgba(0, 0, 0, 0.3);
 
 @margin-left: 5%;
 @margin-right: 5%;
