--- a/css/app.css
+++ b/css/app.css
@@ -38,6 +38,9 @@ p {
 .nav--on-white-bg {
   background-color: #ffffff;
 }
+.nav--on-light-bg {
+  background-color: #F7F7F7;
+}
 .nav--extra-height {
   padding-bottom: 6em;
 }
@@ -254,6 +257,19 @@ p {
     padding-top: 0;
   }
 }
+@media screen and (max-width: 900px) {
+  .section-heading__with-ipad--side-by-side {
+    display: none;
+  }
+}
+.section-heading__with-ipad--vertically-stacked {
+  padding-bottom: 1em;
+}
+@media screen and (min-width: 900px) {
+  .section-heading__with-ipad--vertically-stacked {
+    display: none;
+  }
+}
 .my-work-item--with-desktop-browser {
   padding-top: 3em;
   padding-bottom: 0;
@@ -272,7 +288,7 @@ p {
   width: 100%;
   max-width: 65em;
   display: block;
-  margin-top: 1em;
+  margin-top: 3em;
   -webkit-filter: drop-shadow(3px 3px 5px rgba(0, 0, 0, 0.3));
   filter: drop-shadow(3px 3px 5px rgba(0, 0, 0, 0.3));
 }
@@ -315,6 +331,10 @@ p {
     margin: auto;
     padding-top: 8em;
   }
+}
+.animation-example {
+  width: 100%;
+  display: inline-block;
 }
 .footer {
   min-height: 10em;
@@ -378,4 +398,19 @@ p {
 }
 .text--on-dark-bg {
   color: #ffffff;
+}
+.list {
+  list-style: none;
+  padding-left: 0;
+}
+.list__item {
+  margin-left: -0.8em;
+  list-style-position: inside;
+  text-indent: -0.8em;
+  padding-left: 1em;
+  max-width: 35em;
+}
+.list__item:before {
+  content: '\00B7';
+  padding-right: 0.5em;
 }
