--- a/less/variables.less
+++ b/less/variables.less
@@ -23,13 +23,14 @@
 @section-padding-last: 4em;
 
 @sub-section-padding-top: 1em;
-@sub-section-padding-bottom: 0em;
+@sub-section-padding-bottom: 1.5em;
 @sub-section-padding-first: 3em;
 @sub-section-padding-last: 4em;
 
+@screen-medium: 700px;
 @screen-large: 900px;
 
-@max-text-width: 35em;
+@max-text-width: 630px;
 
 // I'm basing a lot of dimensions on the width of the profile image
 @block-width: 400px;
