--- a/css/_app.css
+++ b/css/_app.css
@@ -201,9 +201,6 @@ p {
     margin: auto;
   }
 }
-.sub-section__content--no-margins {
-  margin: 0;
-}
 .sub-section--first-in-section {
   padding-top: 3em;
 }
@@ -215,11 +212,6 @@ p {
 }
 .image--full-width {
   max-width: 100%;
-}
-.image--medium {
-  width: 100%;
-  max-width: 630px;
-  display: inline-block;
 }
 .my-work-item {
   padding-top: 2em;
@@ -265,16 +257,16 @@ p {
     padding-top: 0;
   }
 }
-@media screen and (min-width: 900px) {
-  .h2-heading__with-ipad--side-by-side {
+@media screen and (max-width: 900px) {
+  .section-heading__with-ipad--side-by-side {
     display: none;
   }
 }
-.h2-heading__with-ipad--vertically-stacked {
+.section-heading__with-ipad--vertically-stacked {
   padding-bottom: 1em;
 }
 @media screen and (min-width: 900px) {
-  .h2-heading__with-ipad--vertically-stacked {
+  .section-heading__with-ipad--vertically-stacked {
     display: none;
   }
 }
@@ -342,9 +334,7 @@ p {
 }
 .animation-example {
   width: 100%;
-  max-width: 24em;
   display: inline-block;
-  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
 }
 .footer {
   min-height: 10em;
@@ -354,23 +344,17 @@ p {
     padding-top: 4em;
   }
 }
-.h1-heading {
-  font-size: 2em;
-  margin-top: 0;
-  line-height: 1.5em;
-  max-width: 630px;
-}
-.h2-heading {
+.section-heading {
   font-size: 1.5em;
   margin-top: 0;
+  margin-bottom: 1em;
   line-height: 1.5em;
-  max-width: 630px;
 }
-.h3-heading {
+.sub-heading {
   font-size: 1.1em;
+  font-weight: 700;
   margin-top: 0;
   margin-bottom: 0.75em;
-  max-width: 630px;
 }
 .link {
   text-decoration: none;
