--- a/css/app.css
+++ b/css/app.css
@@ -247,6 +247,11 @@ p {
   -webkit-filter: drop-shadow(3px 3px 5px rgba(0, 0, 0, 0.3));
   filter: drop-shadow(3px 3px 5px rgba(0, 0, 0, 0.3));
 }
+@media screen and (min-width: 700px) and (max-width: 900px) {
+  .my-work-item__image--ipad {
+    max-width: 15em;
+  }
+}
 @media screen and (min-width: 900px) {
   .my-work-item__image--ipad {
     -webkit-filter: drop-shadow(10px 15px 20px rgba(0, 0, 0, 0.3));
@@ -259,13 +264,19 @@ p {
   padding-top: 2em;
   vertical-align: top;
 }
+@media screen and (min-width: 700px) and (max-width: 900px) {
+  .my-work-item__description--ipad {
+    padding-left: 2em;
+    padding-top: 0;
+  }
+}
 @media screen and (min-width: 900px) {
   .my-work-item__description--ipad {
     padding-left: 4em;
     padding-top: 0;
   }
 }
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 700px) {
   .h2-heading__with-ipad--side-by-side {
     display: none;
   }
@@ -273,7 +284,7 @@ p {
 .h2-heading__with-ipad--vertically-stacked {
   padding-bottom: 1em;
 }
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 700px) {
   .h2-heading__with-ipad--vertically-stacked {
     display: none;
   }
