--- a/css/app.css
+++ b/css/app.css
@@ -248,6 +248,7 @@ p {
   width: 100%;
   max-width: 630px;
   display: inline-block;
+  margin-bottom: 2em;
 }
 .my-work-item {
   padding-top: 2em;
@@ -353,7 +354,7 @@ p {
   vertical-align: top;
   max-width: 15em;
 }
-.my-work-item--with-full-width-image {
+.my-work-item_full-width-image--rubicon {
   padding: 0;
   width: 100%;
   height: 40em;
@@ -362,7 +363,20 @@ p {
   background-repeat: no-repeat;
 }
 @media screen and (min-width: 900px) {
-  .my-work-item--with-full-width-image {
+  .my-work-item_full-width-image--rubicon {
+    height: 50em;
+  }
+}
+.my-work-item_full-width-image--kolektiv {
+  padding: 0;
+  width: 100%;
+  height: 40em;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/images/watching_usability_testing_summary_video.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+@media screen and (min-width: 900px) {
+  .my-work-item_full-width-image--kolektiv {
     height: 50em;
   }
 }
@@ -408,7 +422,7 @@ p {
 }
 .h3-heading {
   font-size: 1.1em;
-  margin-top: 0;
+  margin-top: 2em;
   margin-bottom: 0.75em;
   max-width: 630px;
 }
