--- a/less/app.less
+++ b/less/app.less
@@ -305,6 +305,13 @@ p {
   margin-bottom: 2em;
 }
 
+.image--small {
+  width: 100%;
+  max-width: calc(@max-text-width/2);
+  display: inline-block;
+  margin-bottom: 2em;
+}
+
 
 
 // --- MY WORK 
