fixing up the family image and commented out version of side projects

--- a/less/app.less
+++ b/less/app.less
@@ -520,6 +520,21 @@ p {
 
 .my-work-item__image--side-projects-container {
   font-size: 0; //needed to remove the gap between images.
+  position: relative;
+}
+
+// .my-work-item__image--side-projects-container:hover span.side-project-name{
+//  opacity: 1;
+// }
+
+.my-work-item__side-project {
+  position: relative;
+  max-width: calc(@screen-large/4);
+  display: inline-block;
+}
+
+.my-work-item__side-project:hover span.side-project-name{
+ opacity: 1;
 }
 
 .my-work-item__image--side-project-link {
@@ -528,7 +543,30 @@ p {
 }
 
 .my-work-item__image--side-project-link:hover{
-    opacity:0.5;
+    opacity:1;
+}
+
+
+
+span.side-project-name {
+  background: rgba(0,0,0,0.5);
+  color: white;
+  cursor: pointer;
+  display: table;
+  left: 0;
+  position: absolute;
+  top: 0;
+  height: calc(@screen-large/4);
+  // width: calc(@screen-large/4);
+  width: 100%;
+  opacity: 0;
+  font-size: 18px;
+}
+
+span.side-project-name span {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
 }
 
 
