--- a/less/app.less
+++ b/less/app.less
@@ -313,6 +313,10 @@ p {
   margin-bottom: 2em;
 }
 
+.image--with-caption {
+  margin-bottom: 0;
+}
+
 
 
 // --- MY WORK 
@@ -728,5 +732,12 @@ span.side-project-name span {
 .list__item:before {
     content:'\00B7';  //code for mid dot character
     padding-right: 0.5em;
+}
+
+.image-caption {
+  color: @colour-dark-gray;
+  font-size: 0.75em;
+  margin-bottom: 2em;
+  line-height: 1.5em;
 }
 
