--- a/less/variables.less
+++ b/less/variables.less
@@ -7,6 +7,7 @@
 
 @colour-almost-black: #030303;
 @colour-white: #ffffff;
+@colour-dark-gray: #747474;
 @colour-medium-gray: #E0E0E0;
 @colour-light-gray: #F7F7F7;
 @colour-link-blue: #0066CC;
