--- a/less/app.less
+++ b/less/app.less
@@ -711,6 +711,11 @@ span.side-project-name span {
   display: inline;
 }
 
+.link--case-study-nav
+{
+  padding-right: 3em;
+}
+
 .text--on-dark-bg {
   color: @colour-white;
 }
