restyled case study navigation

--- a/less/app.less
+++ b/less/app.less
@@ -255,6 +255,11 @@ p {
   position: relative;
 }
 
+.section--nav{
+  padding-top: calc(@section-padding-top+0.75em);
+  // padding-bottom: @section-padding-bottom;
+}
+
 
 .sub-section {}
 
