--- a/css/app.css
+++ b/css/app.css
@@ -216,6 +216,9 @@ p {
   z-index: 99;
   position: relative;
 }
+.section--nav {
+  padding-top: calc(2.75em);
+}
 .sub-section__content {
   padding-top: 1em;
   padding-bottom: 1.5em;
