--- a/less/variables.less
+++ b/less/variables.less
@@ -28,6 +28,7 @@
 @sub-section-padding-first: 3em;
 @sub-section-padding-last: 4em;
 
+@screen-small: 350px;
 @screen-medium: 700px;
 @screen-large: 900px;
 
