--- a/css/app.css
+++ b/css/app.css
@@ -561,7 +561,14 @@ span.side-project-name span {
   display: inline;
 }
 .link--case-study-nav {
-  padding-right: 3em;
+  display: block;
+  padding-bottom: 0.75em;
+}
+@media screen and (min-width: 350px) {
+  .link--case-study-nav {
+    display: inline;
+    padding-right: 3em;
+  }
 }
 .text--on-dark-bg {
   color: #ffffff;
