making the dot fit in the intro

--- a/less/app.less
+++ b/less/app.less
@@ -179,7 +179,7 @@ p {
   max-width: @block-width;
   color: @colour-white;
   margin-left: @margin-left;
-  margin-right: @margin-right;
+  margin-right: @margin-right-reduced;
 
   // Medium devices and larger
   @media screen and (min-width: @screen-medium){
@@ -187,6 +187,7 @@ p {
     background-color: @colour-medium-gray;
     padding-bottom: 0;
     margin-bottom: 0;
+    margin-right: @margin-right;
   }
 }
 
