Eliminating orphaned words in headings

--- a/less/app.less
+++ b/less/app.less
@@ -758,3 +758,8 @@ span.side-project-name span {
   margin-bottom: 2em;
   line-height: 1.5em;
 }
+
+// used to avoid orphaned words
+.nobr {
+  white-space:nowrap;
+}
