--- a/css/app.css
+++ b/css/app.css
@@ -1,10 +1,6 @@
-html {
-  overflow-x: hidden;
-}
 body {
   font-family: 'Roboto', sans-serif;
   width: 100%;
-  overflow-x: hidden;
   position: relative;
   font-size: 18px;
   line-height: 1.5em;
@@ -28,21 +24,29 @@ p {
 }
 .nav {
   background-color: #E0E0E0;
-  padding: 0.1em 0em 2em 0em;
+  padding: 0.1em 0em 0.1em 0em;
+  position: -webkit-sticky;
+  position: -moz-sticky;
+  position: -ms-sticky;
+  position: -o-sticky;
+  position: sticky;
+  z-index: 1;
+  top: 0px;
 }
 @media screen and (min-width: 900px) {
   .nav {
-    padding: 2em 2em 4em 2em;
+    padding: 2em 2em 2em 2em;
   }
+}
+.nav--stuck {
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
+  background-color: #ffffff;
 }
 .nav--on-white-bg {
   background-color: #ffffff;
 }
 .nav--on-light-bg {
   background-color: #F7F7F7;
-}
-.nav--extra-height {
-  padding-bottom: 6em;
 }
 .nav__list {
   list-style: none;
@@ -128,6 +132,10 @@ p {
     width: 400px;
     margin-left: 0;
   }
+}
+.header--extra-pading {
+  padding-bottom: 3em;
+  background-color: #E0E0E0;
 }
 .intro {
   background-color: #030303;
