--- a/less/app.less
+++ b/less/app.less
@@ -4,13 +4,13 @@
 
 
 html {
-  overflow-x: hidden;
+  // overflow-x: hidden;
 }
 
 body {
   font-family: 'Roboto', sans-serif;
   width: 100%;
-  overflow-x: hidden;
+  // overflow-x: hidden;
   position: relative;
   font-size: @font-base-size;
   line-height: 1.5em;
@@ -31,13 +31,29 @@ p {
 }
 
 // --- NAV
+
 .nav {
   background-color: @colour-medium-gray;
-  padding: 0.1em 0em 2em 0em;
+  padding: 0.1em 0em 0.1em 0em;
+
+  position: -webkit-sticky;
+  position: -moz-sticky;
+  position: -ms-sticky;
+  position: -o-sticky;
+  position: sticky;
+  z-index: 1;
+  top: 0px;
 
   @media screen and (min-width: @screen-large) {
-    padding: 2em 2em 4em 2em;
+    padding: 2em 2em 2em 2em;
   }
+}
+
+.nav--stuck {
+
+  // padding-bottom: 0;
+  box-shadow: 0px 1px 2px @colour-shadow;
+  background-color: @colour-white;
 }
 
 .nav--on-white-bg {
@@ -46,10 +62,6 @@ p {
 
 .nav--on-light-bg {
   background-color: @colour-light-gray;
-}
-
-.nav--extra-height {
-    padding-bottom: 6em;
 }
 
 .nav__list {
@@ -149,6 +161,11 @@ p {
     width: @block-width;
     margin-left: 0;
   }
+}
+
+.header--extra-pading {
+  padding-bottom: 3em;
+  background-color: @colour-medium-gray;
 }
 
 .intro {
