--- a/css/app.css
+++ b/css/app.css
@@ -23,6 +23,7 @@ p {
   font-weight: 100;
 }
 .nav {
+  transition: background-color 0.25s ease;
   background-color: #E0E0E0;
   padding: 0.1em 0em 0.1em 0em;
   position: -webkit-sticky;
@@ -39,13 +40,16 @@ p {
   }
 }
 .nav--stuck {
+  transition: background-color 1s ease;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
   background-color: #ffffff;
 }
 .nav--on-white-bg {
+  transition: background-color 0.25s ease;
   background-color: #ffffff;
 }
 .nav--on-light-bg {
+  transition: background-color 0.25s ease;
   background-color: #F7F7F7;
 }
 .nav__list {
