--- a/less/app.less
+++ b/less/app.less
@@ -33,6 +33,7 @@ p {
 // --- NAV
 
 .nav {
+  transition: background-color 0.25s ease;
   background-color: @colour-medium-gray;
   padding: 0.1em 0em 0.1em 0em;
 
@@ -51,16 +52,18 @@ p {
 
 .nav--stuck {
 
-  // padding-bottom: 0;
+  transition: background-color 1s ease;
   box-shadow: 0px 1px 2px @colour-shadow;
   background-color: @colour-white;
 }
 
 .nav--on-white-bg {
+  transition: background-color 0.25s ease;
   background-color: @colour-white;
 }
 
 .nav--on-light-bg {
+  transition: background-color 0.25s ease;
   background-color: @colour-light-gray;
 }
 
