tweaking opacity transition for side projects

--- a/less/app.less
+++ b/less/app.less
@@ -583,7 +583,8 @@ p {
 }
 
 .my-work-item__side-project:hover span.side-project-name{
- opacity: 1;
+  transition: opacity 1s ease;
+  opacity: 1;
 }
 
 .my-work-item__image--side-project-link {
