--- a/css/app.css
+++ b/css/app.css
@@ -459,6 +459,7 @@ p {
   }
 }
 .my-work-item__side-project:hover span.side-project-name {
+  transition: opacity 1s ease;
   opacity: 1;
 }
 .my-work-item__image--side-project-link {
