--- a/less/app.less
+++ b/less/app.less
@@ -316,6 +316,14 @@ p {
   max-width: @block-width;
 }
 
+.tota11y {
+  display: none;
+
+  @media screen and (min-width: @screen-large) {
+    display: block;
+  }
+}
+
 
 // --- IMAGES
 
