--- a/less/variables.less
+++ b/less/variables.less
@@ -10,7 +10,7 @@
 @colour-dark-gray: #747474;
 @colour-medium-gray: #E0E0E0;
 @colour-light-gray: #F7F7F7;
-@colour-link-blue: #0066CC;
+@colour-link-blue: #0062C3;
 @colour-shadow: rgba(0, 0, 0, 0.3);
 
 @margin-left: 5%;
@@ -37,4 +37,3 @@
 
 // I'm basing a lot of dimensions on the width of the profile image
 @block-width: 400px;
-
