--- a/less/app.less
+++ b/less/app.less
@@ -713,6 +713,10 @@ span.side-project-name span {
   opacity: .8;
 }
 
+// .link:visited {
+//   color: @colour-link-blue-visited
+// }
+
 .link__about-me {
   color: @colour-white;
   text-decoration: underline;
@@ -728,8 +732,16 @@ span.side-project-name span {
   text-decoration: underline;
 }
 
+.link--on-dark-bg:visited {
+  color: @colour-medium-gray;
+}
+
 .link--on-light-bg {
   color: @colour-link-blue;
+}
+
+.link--on-light-bg:visited {
+  color: @colour-link-blue-visited
 }
 
 .link--list {
