--- a/less/variables.less
+++ b/less/variables.less
@@ -11,6 +11,7 @@
 @colour-medium-gray: #E0E0E0;
 @colour-light-gray: #F7F7F7;
 @colour-link-blue: #0062C3;
+@colour-link-blue-visited: #9900CC;
 @colour-shadow: rgba(0, 0, 0, 0.3);
 
 @margin-left: 5%;
